created DELETE APIs of Services and ACCOUNT APIs
