# controllers/service.controller.ts
@@ -1,8 +1,10 @@
 import { Request, Response, NextFunction } from "express";
 import slugify from "slugify";
+import mongoose from "mongoose";
 
 import Service from '../models/service.model';
 import SubService from '../models/sub-service.model';
+import { successAction, failAction } from "../utils/response";
 
 // Services
 const createService = async (req: Request, res: Response, next: NextFunction): Promise<void | Response> => {
@@ -16,16 +18,9 @@ const createService = async (req: Request, res: Response, next: NextFunction): P
         });
         const savedService = await service.save();
         if (!savedService) {
-            return res.status(500).json({
-                success: false,
-                message: 'Server error, pls try again.'
-            })
+            return res.status(500).json(failAction('Server error, pls try again.', 500))
         };
-        return res.status(201).json({
-            success: true,
-            service: savedService,
-            message: 'Service created successfully'
-        });
+        return res.status(201).json(successAction(savedService, 'Service created successfully', true));
     } catch (error) {
         return next(error);
     }
@@ -37,10 +32,7 @@ const updateService = async (req: Request, res: Response, next: NextFunction): P
         const serviceSlug = slugify(req.body.serviceTitle, { lower: true, remove: /[*+~.()'"!:@]/g, trim: true });
         const payload = req.body
         if (!payload.serviceTitle || !payload.serviceDescription || !payload.serviceIcon) {
-            return res.status(422).json({
-                success: false,
-                message: 'All fields are required.'
-            })
+            return res.status(422).json(failAction('All fields are required.', 422))
         }
         const updateDoc = {
             $set: {
@@ -53,24 +45,20 @@ const updateService = async (req: Request, res: Response, next: NextFunction): P
         };
         const result = await Service.findOneAndUpdate(filter, updateDoc, { new: true });
         if (!result) {
-            return res.status(500).json({
-                success: false,
-                message: 'No service found with this ID, pls try again.'
-            })
+            return res.status(500).json(failAction('No service found with this ID, pls try again.', 500))
         };
-        return res.status(201).json({
-            success: true,
-            service: result,
-            message: 'Service updated successfully'
-        });
+        return res.status(201).json(successAction(result, 'Service updated successfully', true));
     } catch (error) {
         return next(error);
     }
 }
 
-const getServices = async (_: Request, res: Response, next: NextFunction): Promise<void | Response> => {
+const getServices = async (req: Request, res: Response, next: NextFunction): Promise<void | Response> => {
     try {
-        const foundServices = await Service.find({ isDeleted: false }).lean();
+        const perPage = Number(req.query.perPage) || 10;
+        const page = Number(req.query.page) || 1;
+        const foundServices = await Service.find({ isDeleted: false }).limit(perPage)
+            .skip(perPage * (page - 1)).lean();
         // this solution is with Promise.all (use if you prefer it and comment out the below code using await and for loop);
         // const populatedServices = await Promise.all(foundServices.map(async (service) => {
         //     const populatedService: any = service.toObject(); // Convert to plain JavaScript object
@@ -83,11 +71,7 @@ const getServices = async (_: Request, res: Response, next: NextFunction): Promi
             populatedService.subServices = subServices;
         }
         if (!foundServices || foundServices.length <= 0) {
-            return res.status(200).json({
-                success: true,
-                message: 'No services found',
-                services: []
-            });
+            return res.status(200).json(failAction('No services created yet.', 200));
         };
         return res.status(200).json({
             success: true,
@@ -105,16 +89,26 @@ const getService = async (req: Request, res: Response, next: NextFunction): Prom
         if (foundService) {
             // find 1 service created before current service including current service
             const servicesBefore = await Service.find({
-                $or: [
-                    { createdAt: { $lt: foundService.createdAt } },
-                    { _id: foundService._id }
+                $and: [
+                    { isDeleted: false },
+                    {
+                        $or: [
+                            { createdAt: { $lt: foundService.createdAt } },
+                            { _id: foundService._id }
+                        ]
+                    }
                 ]
             }).sort({ createdAt: -1 }).limit(2).select('serviceTitle serviceSlug -_id').lean();
 
             // find 1 service created after current service
             const servicesAfter = await Service.find({
-                $or: [
-                    { createdAt: { $gt: foundService.createdAt } },
+                $and: [
+                    { isDeleted: false },
+                    {
+                        $or: [
+                            { createdAt: { $gt: foundService.createdAt } },
+                        ]
+                    }
                 ]
             }).limit(1).select('serviceTitle serviceSlug -_id').lean();
 
@@ -122,7 +116,6 @@ const getService = async (req: Request, res: Response, next: NextFunction): Prom
 
             const subServices = await SubService.find({ parentService: foundService._id, isDeleted: false });
             (foundService as any).subServices = subServices;
-
             return res.status(200).json({
                 success: true,
                 service: foundService,
@@ -137,6 +130,37 @@ const getService = async (req: Request, res: Response, next: NextFunction): Prom
         });
 
     } catch (error) {
+        return next(error);
+    }
+}
+
+const deleteService = async (req: Request, res: Response, next: NextFunction): Promise<void | Response> => {
+    const session = await mongoose.startSession();
+    try {
+        session.startTransaction();
+        // Find and delete the service within the transaction
+        const serviceDeleteRes = await Service.findByIdAndDelete(req.query.id).session(session);
+        const subServiceDeleteRes = await SubService.deleteMany({ parentService: req.query.id }, { session });
+        // Commit the transaction if successful
+        if (serviceDeleteRes && subServiceDeleteRes && subServiceDeleteRes.deletedCount > 0) {
+            await session.commitTransaction();
+            session.endSession();
+            return res.status(201).json({
+                success: true,
+                message: 'Service and its sub services deleted successfully'
+            });
+        };
+        // If an error occurs, abort the transaction and handle the error
+        await session.abortTransaction();
+        session.endSession();
+        return res.status(404).json({
+            success: false,
+            message: "Please check service ID you are trying to delete."
+        });
+    } catch (error) {
+        // If an error occurs, abort the transaction and handle the error
+        await session.abortTransaction();
+        session.endSession();
         return next(error);
     }
 }
@@ -185,7 +209,7 @@ const updateSubService = async (req: Request, res: Response, next: NextFunction)
             return res.status(422).json({
                 success: false,
                 message: 'All fields are required.'
-            })
+            });
         };
         const foundService = await Service.findOne({ _id: req.body.parentService, isDeleted: false });
         if (!foundService) {
@@ -209,7 +233,7 @@ const updateSubService = async (req: Request, res: Response, next: NextFunction)
             return res.status(500).json({
                 success: false,
                 message: 'No sub service found with this ID, pls try again.'
-            })
+            });
         };
         return res.status(201).json({
             success: true,
@@ -242,4 +266,32 @@ const getSubService = async (req: Request, res: Response, next: NextFunction) =>
     }
 }
 
-export { createService, createSubService, getServices, getService, getSubService, updateService, updateSubService };
+const deleteSubService = async (req: Request, res: Response, next: NextFunction): Promise<void | Response> => {
+    try {
+        const deleteSubServiceRes = await SubService.findByIdAndDelete(req.query.id);
+        if (!deleteSubServiceRes) {
+            return res.status(201).json({
+                success: false,
+                message: 'No sub service found with this ID'
+            });
+        }
+        return res.status(201).json({
+            success: true,
+            message: 'Sub service deleted successfully'
+        });
+    } catch (error) {
+        return next(error);
+    }
+}
+
+export {
+    createService,
+    createSubService,
+    getServices,
+    getService,
+    getSubService,
+    updateService,
+    updateSubService,
+    deleteService,
+    deleteSubService
+};
